WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.pas

Function lcCmdwinResize (hCmdLine: Integer; Left: Integer; Top: Integer; Width: Integer; Height: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdwinUpdate (hCmdLine: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCreatePropwin (hWndParent: HWND; Left: Integer; Top: Integer; Width: Integer; Height: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPropwinResize (hPropWnd: Integer; Left: Integer; Top: Integer; Width: Integer; Height: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPropwinUpdate (hPropWnd: Integer; bSelChanged: Integer): Integer; stdcall; external 'litecad.dll';
Function lcGetErrorCode : Integer; stdcall; external 'litecad.dll';
Function lcGetErrorStr : PWideChar; stdcall; external 'litecad.dll';
Function lcExtractPreview (szFileName: PWideChar; hGlob: Integer; MaxSize: Integer): Integer; stdcall; external 'litecad.dll';
Function lcExtractFileInfo (szFileName: PWideChar; szGuid: Pointer; szComment: Pointer; pInt0: Pinteger; pInt1: Pinteger): Integer; stdcall; external 'litecad.dll';
Function lcFilletSetLines (L1x0: Double; L1y0: Double; L1x1: Double; L1y1: Double; L2x0: Double; L2y0: Double; L2x1: Double; L2y1: Double): Integer; stdcall; external 'litecad.dll';
Function lcFillet (Rad: Double; Bis: Double; Tang: Double): Integer; stdcall; external 'litecad.dll';
Function lcFilletGetPoint (iPnt: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcDgGetFileName (hWnd: HWND; Mode: Integer): PWideChar; stdcall; external 'litecad.dll';
Function lcDgGetValue (hWnd: HWND; Lef: Integer; Top: Integer; szTitle: PWideChar; szPrompt: PWideChar; szValue: PWideChar): PWideChar; stdcall; external 'litecad.dll';
Function lcDgGetValue2 (hWnd: HWND; Lef: Integer; Top: Integer; szTitle: PWideChar; szPrompt: PWideChar; szValue: Pointer; MaxChar: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPlugGetOption (szFileName: PWideChar; szKey: PWideChar): PWideChar; stdcall; external 'litecad.dll';
Function lcPlugSetOption (szFileName: PWideChar; szKey: PWideChar; szValue: PWideChar; bSave: Integer): Integer; stdcall; external 'litecad.dll';
Procedure lcGetPolarPoint (X: Double; Y: Double; Ang: Double; Dist: Double; pX: Pdouble; pY: Pdouble); stdcall; external 'litecad.dll';
Function lcGetClientSize (hWnd: HWND; pWidth: Pinteger; pHeight: Pinteger): Integer; stdcall; external 'litecad.dll';
Procedure lcTextOut (hDC: HDC; x: Integer; y: Integer; szText: PWideChar; ColorRGB: Integer); stdcall; external 'litecad.dll';
Function lcCreateCommand (hLcWnd: Integer; Id: Integer; szName: PWideChar; bNeedSel: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdExit : Integer; stdcall; external 'litecad.dll';
Function lcCmdPrompt (hCmd: Integer; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcCmdGetEntByPoint (hCmd: Integer; Xwnd: Integer; Ywnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdSelectEnt (hCmd: Integer; hEntity: Integer; bSelect: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdRedraw (hCmd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdSetFocus (hCmd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdRegen (hCmd: Integer; hEnt: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdClearPoints (hCmd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdAddPoint (hCmd: Integer; Id: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcCmdGetPoint (hCmd: Integer; Id: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcCmdSetBasePoint (hCmd: Integer; bEnable: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcCmdDrawLine (hCmd: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double): Integer; stdcall; external 'litecad.dll';
Function lcCmdDrawPickbox (hCmd: Integer; Xwnd: Integer; Ywnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdEqualPoints (hCmd: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double; Delta: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPaintBegin (hLcWnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPaintSetPen (Style: Integer; Width: Integer; ColorRed: Integer; ColorGreen: Integer; ColorBlue: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPaintSetBrush (ColorRed: Integer; ColorGreen: Integer; ColorBlue: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPaintPixel (X: Double; Y: Double; Size: Integer; ColorRed: Integer; ColorGreen: Integer; ColorBlue: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPaintPoint (X: Double; Y: Double; PtMode: Integer; PtSize: Double): Integer; stdcall; external 'litecad.dll';
Function lcPaintLine (X0: Double; Y0: Double; X1: Double; Y1: Double): Integer; stdcall; external 'litecad.dll';
Function lcPaintPlineVer (X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcPaintPline (bClosed: Integer; bFilled: Integer; bBorder: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPaintCircle (X: Double; Y: Double; R: Double; bFilled: Integer; bBorder: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPaintArc (X: Double; Y: Double; R: Double; Ang0: Double; AngArc: Double): Integer; stdcall; external 'litecad.dll';
Function lcPaintSetFont (szFontName: PWideChar; Height: Double; Angle: Double; bBold: Integer; bItalic: Integer; bUnderline: Integer; bStrikeOut: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPaintSetTextColor (ColorRed: Integer; ColorGreen: Integer; ColorBlue: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPaintText (szText: PWideChar; X: Double; Y: Double; Align: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPaintEnd : Integer; stdcall; external 'litecad.dll';
Procedure lcSurfInitialize (MaxSectPnt: Integer; AngStep: Double); stdcall; external 'litecad.dll';
Procedure lcSurfUnInitialize ; stdcall; external 'litecad.dll';
Procedure lcSurfClearTriangles ; stdcall; external 'litecad.dll';
Function lcSurfAddTriangle (X0: Double; Y0: Double; Z0: Double; X1: Double; Y1: Double; Z1: Double; X2: Double; Y2: Double; Z2: Double): Integer; stdcall; external 'litecad.dll';
Function lcSurfGetZ (X: Double; Y: Double; pZ: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcSurfGetZ_dbg (X: Double; Y: Double; pZ: Pdouble; pX0: Pdouble; pY0: Pdouble; pZ0: Pdouble; pX1: Pdouble; pY1: Pdouble; pZ1: Pdouble; pX2: Pdouble; pY2: Pdouble; pZ2: Pdouble): Integer; stdcall; external 'litecad.dll';
Procedure lcSurfClearPlan ; stdcall; external 'litecad.dll';
Function lcSurfAddPlanVer (X: Double; Y: Double; Bulge: Double): Integer; stdcall; external 'litecad.dll';
Function lcSurfMakeSection : Integer; stdcall; external 'litecad.dll';
Function lcSurfGetSectPoint (iPnt: Integer; pX: Pdouble; pY: Pdouble; pZ: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcCSectClear : Integer; stdcall; external 'litecad.dll';
Function lcCSectBegin (PlineType: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCSectAddPoint (X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcCSectEnd : Integer; stdcall; external 'litecad.dll';
Function lcCSectCalcArea : Integer; stdcall; external 'litecad.dll';
Function lcCSectGetArea (iArea: Integer; pAreaVal: Pdouble; pNumPnts: Pinteger): Integer; stdcall; external 'litecad.dll';
Function lcCSectGetAreaPoint (iArea: Integer; iPnt: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'litecad.dll';
Procedure lcEventReturnCode (code: Integer); stdcall; external 'litecad.dll';
Procedure lcEventsEnable (bEnable: Integer); stdcall; external 'litecad.dll';
Procedure lcOnEventMouseMove (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventMouseDown (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventMouseUp (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventMouseDblClk (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventMouseSnap (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventMouseLeave (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventMouseWheel (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventKeyDown (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventPaint (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventZoom (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventSelectView (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventGetPoint (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventAddCommand (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventCmdStart (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventCmdFinish (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventCmdMouseDown (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventCmdMouseUp (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventCmdMouseMove (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventCmdString (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventAddEntity (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventRegen (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventFioProgress (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventSelection (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventPropChanged (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventGripSelect (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventGripMove (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventEntErase (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventEntMove (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventEntRotate (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventEntScale (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventEntMirror (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventEntProp (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventHelp (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventAddStr (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventFontReplace (pFunc: Pointer); stdcall; external 'litecad.dll';

implementation
end.
